--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
@@ -27,15 +28,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
-    compile 'pub.devrel:easypermissions:0.1.5'
-    compile('com.google.api-client:google-api-client-android:1.22.0') {
-        exclude group: 'org.apache.httpcomponents'
-    }
-    compile('com.google.apis:google-api-services-gmail:v1-rev53-1.22.0') {
-        exclude group: 'org.apache.httpcomponents'
-    }
-    configurations.all {
-        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
-    }
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+    compile 'com.jakewharton:butterknife:8.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.deano2390:MaterialShowcaseView:1.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+
 }
